[Mac] Fix an ESC key issue with the find bar on Sierra

Prevent the window from handling the ESC key when the find bar text is
focused on Sierra.

BUG=628979

Review-Url: https://codereview.chromium.org/2398303002
Cr-Commit-Position: refs/heads/master@{#424279}

Former-commit-id: 795ed3707fefc9d39d836545d860f216df620c66